# features

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  FAQ.md  LICENSE  README.md
.docs/demo/: README.md  demo.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy-demo.yml  deploy.yml  release-npm.yml  release.yml  validate.yml
.zed/: settings.json
docs/: guidelines.md  readme-format.md
examples/demo/: tsconfig.json  vitest.config.ts
examples/demo/src/scripts/: experiment.ts
examples/javascript-large/: CODEOWNERS  package.json
examples/javascript-large/coverage/: index.html  lcov.info
examples/javascript-large/coverage/lcov-report/: index.html
examples/javascript-large/src/scripts/: analyzer.cpp  deploy.sh  utils.py
examples/javascript-large/tests/: feature-1.test.ts
examples/no-features/: package.json
examples/rust-basic/.coverage/: cobertura.xml  lcov.info
examples/tests-skip-changes/: README.md  package.json  pnpm-lock.yaml
examples/tests-skip-changes/coverage/: index.html  lcov.info
examples/tests-skip-changes/coverage/lcov-report/: index.html
examples/tests-skip-changes/src/scripts/: another-flag.ts  feature-flag.tsx  processor.rs  toggle.ts
examples/tests-skip-changes/tests/: feature-1.test.ts
examples/tests-with-changes/: README.md
tools/cli/: Cargo.toml  README.md  package-lock.json  package.json  pre-install.js  start.js  uninstall.js
tools/cli/src/: bin.rs  build.rs  checker.rs  codeowners.rs  coverage_parser.rs  dependency_resolver.rs  feature_metadata_detector.rs  features_toml_parser.rs  file_scanner.rs  git_helper.rs  http_server.rs  import_detector.rs  lib.rs  main.rs  models.rs  printer.rs  readme_parser.rs  scan.rs
tools/cli/tests/: README.md  coverage_test.rs  find_owner_test.rs  integration_skip_changes_test.rs  integration_test.rs  integration_with_changes_test.rs
tools/cli/tests/snapshots/: find_owner_explicit.json  find_owner_inherited.json  javascript_basic_features.json  javascript_basic_features_no_changes.json  tests_skip_changes.json  tests_with_changes.json
tools/web/: .gitignore  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
tools/web/e2e/: app-sidebar.spec.ts  feature-dependencies.spec.ts  feature-metadata.spec.ts  feature-owner.spec.ts  github-logo.spec.ts
tools/web/src/: Dashboard.tsx  index.css  index.tsx  main.tsx
tools/web/src/components/: app-sidebar copy.tsx  app-sidebar-search-input.tsx  app-sidebar.tsx  feature-breadcrumb.tsx  feature-changes.tsx  feature-decisions.tsx  feature-description.tsx  feature-details.tsx  feature-insights.tsx  feature-meta.tsx  feature-metadata-table.tsx  feature-owner.tsx  feature-tests.tsx  features-provider.tsx  header.tsx  help-button.tsx  main-layout.tsx  markdown-renderer.tsx  markown-renderer.tsx  meta-value.tsx  metadata-tooltip-content.tsx  nav-features.tsx  owner-dot.tsx  smart-search-input.tsx  sortable-table-header.tsx  stats-card.tsx  version-indicator.tsx
tools/web/src/hooks/: use-metadata.ts  use-sidebar-resize.ts  use-table-filter.ts  use-table-sort.ts
tools/web/src/lib/: feature-selected-context.ts  features-context.ts  format-date.ts  format-feature-name.ts  git-utils.ts  merge-button-refs.ts  owner-color.ts  resolve-owner.ts  smart-query-parser.ts
(+131 files in other folders)
