[package]
name = "features-cli"
version = "0.3.0"
edition = "2024"
description = "A CLI tool for discovering the features in a folder"
license = "MIT"
[[bin]]
name = "features"
test = false
bench = false
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
colored = "2.0"
git2 = "0.18"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
include_dir = "0.7"
notify = "6.0"

[dev-dependencies]
tempfile = "3.0"
