[package]
name = "features-cli"
version = "0.6.8"
edition = "2024"
description = "A CLI tool for discovering the features in a folder"
license = "MIT"
homepage = "https://github.com/interaction-dynamics/features"
repository = "https://github.com/interaction-dynamics/features"
documentation = "https://github.com/interaction-dynamics/features/blob/main/tools/cli/README.md"
readme = "README.md"
keywords = ["features", "cli", "documentation", "analysis", "architecture"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Interaction Dynamics <thibault.friedrich@interaction-dynamics.io>"]
include = ["src", "public", "!public/features.json", "README.md"]

[lib]
name = "features_cli"
path = "src/lib.rs"

[[bin]]
name = "features"
test = false
bench = false
path = "src/bin.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
colored = "2.0"
git2 = "0.18"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
include_dir = "0.7"
notify = "6.0"
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.0"
